--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy to GitHub Pages
 
 on:
   push:
-    branches: [ main, release ]
+    branches: [ main ]
   workflow_dispatch:
 
 permissions:
@@ -18,8 +18,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
@@ -27,20 +26,21 @@ jobs:
           dotnet-version: '9.0.x'
 
       - name: Restore
-        run: dotnet restore SmartCodeLab.csproj
+        run: dotnet restore
 
       - name: Publish
-        run: dotnet publish SmartCodeLab.csproj -c Release -o build
+        run: dotnet publish -c Release -o build
 
-      - name: Prepare site
-        run: |
-          mkdir -p site
-          cp -r build/wwwroot/* site/
+      - name: Set base href for GitHub Pages
+        run: sed -i 's|<base href=\"/\" />|<base href=\"/SmartCodeLab/\" />|' build/wwwroot/index.html
+
+      - name: SPA fallback (404.html)
+        run: cp build/wwwroot/index.html build/wwwroot/404.html
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: site
+          path: build/wwwroot
 
   deploy:
     environment:
@@ -49,8 +49,5 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
+      - id: deployment
         uses: actions/deploy-pages@v4
-
-
