--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,25 +33,29 @@ jobs:
         run: dotnet publish -c Release -o publish
 
       # Для проектных страниц GH Pages требуется base href вида /<repo-name>/
-      - name: Set base href for GitHub Pages
+      - name: Locate index.html and adjust base href
+        id: adjust
         shell: bash
         run: |
           set -e
           REPO_NAME="${{ github.event.repository.name }}"
           BASE_PATH="/${REPO_NAME}/"
-          SITE_DIR="publish/wwwroot"
-          if [ ! -f "$SITE_DIR/index.html" ]; then
-            echo "index.html not found at $SITE_DIR" >&2
+          INDEX_PATH=$(find publish -type f -name index.html | head -n 1 || true)
+          if [ -z "$INDEX_PATH" ]; then
+            echo "index.html not found under publish/" >&2
             ls -R publish || true
             exit 1
           fi
-          sed -i "s|<base href=\"/\" />|<base href=\"${BASE_PATH}\" />|" "$SITE_DIR/index.html"
-          cp "$SITE_DIR/index.html" "$SITE_DIR/404.html"
+          SITE_DIR=$(dirname "$INDEX_PATH")
+          echo "site_dir=$SITE_DIR" >> "$GITHUB_OUTPUT"
+          echo "Using site dir: $SITE_DIR (index at $INDEX_PATH)"
+          sed -i "s|<base href=\"/\" />|<base href=\"${BASE_PATH}\" />|" "$INDEX_PATH"
+          cp "$INDEX_PATH" "$SITE_DIR/404.html"
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: publish/wwwroot
+          path: ${{ steps.adjust.outputs.site_dir }}
 
   deploy:
     environment:
