--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,67 +2,35 @@ name: Deploy to GitHub Pages
 
 on:
   push:
-    branches: [ main, release ]
-  workflow_dispatch:
-
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-concurrency:
-  group: pages
-  cancel-in-progress: true
+    branches: [ master, main ]
+  pull_request:
+    branches: [ master, main ]
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
+    
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Setup .NET 9 SDK
-        uses: actions/setup-dotnet@v4
-        with:
-          dotnet-version: '9.0.x'
-
-      - name: Restore
-        run: dotnet restore
-
-      - name: Publish (Release)
-        run: dotnet publish -c Release -o publish
-
-      # Для проектных страниц GH Pages требуется base href вида /<repo-name>/
-      - name: Locate index.html and adjust base href
-        id: adjust
-        shell: bash
-        run: |
-          set -e
-          REPO_NAME="${{ github.event.repository.name }}"
-          BASE_PATH="/${REPO_NAME}/"
-          INDEX_PATH=$(find publish -type f -name index.html | head -n 1 || true)
-          if [ -z "$INDEX_PATH" ]; then
-            echo "index.html not found under publish/" >&2
-            ls -R publish || true
-            exit 1
-          fi
-          SITE_DIR=$(dirname "$INDEX_PATH")
-          echo "site_dir=$SITE_DIR" >> "$GITHUB_OUTPUT"
-          echo "Using site dir: $SITE_DIR (index at $INDEX_PATH)"
-          sed -i "s|<base href=\"/\" />|<base href=\"${BASE_PATH}\" />|" "$INDEX_PATH"
-          cp "$INDEX_PATH" "$SITE_DIR/404.html"
-
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: ${{ steps.adjust.outputs.site_dir }}
-
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - id: deployment
-        uses: actions/deploy-pages@v4
+    - name: Checkout
+      uses: actions/checkout@v4
+      
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v4
+      with:
+        dotnet-version: '9.0.x'
+        
+    - name: Restore dependencies
+      run: dotnet restore
+      
+    - name: Build
+      run: dotnet build --no-restore --configuration Release
+      
+    - name: Publish
+      run: dotnet publish --no-restore --configuration Release --output ./publish
+      
+    - name: Deploy to GitHub Pages
+      uses: peaceiris/actions-gh-pages@v3
+      if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main'
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./publish/wwwroot
